--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
     margin: 0 auto;
 }
 
-.events_text-input input {
+.events_text-input input[type="text"] {
     border: none;
     flex: auto;
     background-color: rgba(0, 0, 0, 0);
@@ -26,6 +26,38 @@
     font-weight: 300;
     font-size: 18px;
     padding: .5rem .5rem .5rem 3rem;
+}
+
+.events_text-input input[type="reset"] {
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-left: none;
+    position: absolute;
+    top: 10px;
+    right: 65px;
+    z-index: 3;
+    font-size: 24px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    padding: 0;
+    opacity: 0;
+}
+
+.events_text-input:focus-within input[type=reset] {
+    opacity: 1;
+}
+
+.events_text-input input[type="button"] {
+    background-color: #0096d6;
+    color: #fff;
+    border: none;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+    padding: .5rem 1rem;
+    border-radius: 38px;
 }
 
 .events_text-input svg {
@@ -85,15 +117,37 @@
     left: -9999px;
 }
 
+.events_tag-filter {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.events_tag-filter h3 {
+    text-align: left;
+}
+
+.events_tag-filter input[type="button"] {
+    background-color: #0096d6;
+    color: #fff;
+    border: none;
+    font-size: 16px;
+    line-height: 24px;
+    padding: .125rem 1rem;
+    border-radius: 38px;
+    margin-bottom: 10px;
+}
+
 .tag-filters {
     display: flex;
-    flex-wrap: wrap;
+    height: 240px;
+    overflow-y: scroll;
     padding: 20px;
     gap: 10px;
     flex-direction: column;
-}
-
-.tag-section {
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0px 4px 10px 0px #cbcbcb;
+    border: 2px solid #0096d6;
 }
 
 .tag-filters_tags {
@@ -108,13 +162,11 @@
     margin: 2px 10px 2px 0;
     text-transform: capitalize;
     position: relative;
-    background-color: #e3e3e3;
+    background-color: #f0f0f0;
     padding: 4px 12px 4px 8px;
     cursor: pointer;
-    border-radius: 4px;
-}
-
-.c-event-list__listing {
+    border-radius: 14px;
+    line-height: 18px;
 }
 
 .c-event-list__listing ul {
@@ -128,5 +180,44 @@
 }
 
 .c-event-list__listing ul li {
-    width: calc(50% - 32px);
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid #acacac;
+    overflow: hidden;
+    transition: .3s ease;
+    width: calc(50% - 61px);
+}
+
+.c-event-list__listing ul li:hover {
+    box-shadow: 0 0 8px 0px #acacac;
+}
+
+.c-event-list__listing ul li h2 {
+    margin-bottom: 10px;
+}
+
+.c-event-list__listing ul li h3 {
+    border-radius: 12px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: lowercase;
+    background-color: #ababab;
+    color: #fff;
+    display: inline-block;
+    padding: 3px 10px;
+    margin: 0;
+}
+
+.c-event-list__listing ul li a {
+    color: #009de0;
+    text-decoration: none;
+}
+
+.c-event-list__listing ul li a:hover {
+    color: #037db0;
+}
+
+.pagination-navigation {
+    text-align: center;
 }
